--- a/Geospatial/How_Far_To_The_Coast_From_Uluru.Rmd
+++ b/Geospatial/How_Far_To_The_Coast_From_Uluru.Rmd
@@ -9,55 +9,58 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## How far is Uluru from the coast?
+Uluru (also names Ayers Rock) is a large sandstone monolith located in central Australia and is thought to have formed approximately 550 million years ago. It stands 348 metres above the surrounding plain and is listed as a UNESCO World Heritage Site.
 
-Uluru is an iconic Australian landmark. It is a site of importance to ... include infor about importance to Aboriginals. Also include statistics about size etc. 
+It is a site of imporance to the local *Pitjantjatjara* and *Yankunyjatjara* Aboriginal people. Uluru, and the surrounding area, is of great spiritual and cultural significance. 
 
 But what is the minimum distance to the coast from Uluru? And where is that point?
 
 For this exercise we'll need to load the following libraries. 
 
-```{r library}
+```{r library, message = FALSE, warning = FALSE}
 library(tmaptools)
-library("rgeos")
+library(rgeos)
+library(geosphere)
 #library(maptools)
-library(sf)
+#library(sf)
 library(rgdal)
-library(raster)
-library(ggplot2)
+#library(raster)
+#library(ggplot2)
 ```
 
 ## Geospatial Data
-Geospatial data has a nomenclature all of its own and can be quite confusing for the unintiated. The most basic geospatial objects are:
-* Points - a physical location on the earth expressed in latitude and longitude.
-* Polygons - a collection of points that enclose an area
-* Multipolygons - a collection of polygons
+Geospatial data is data that pertains to an object on the surface of the Earth. The most basic of these geospatial objects are:
 
-### Projections
-The world isn't flat and this causes problems for the calculation of distance between two points. Two points separarted by a degree of longitude are further apart at the equartor than at the poles. 
+* Point - a physical location on the earth expressed by two coordinates (e.g.latitude and longitude),
+* Linestring - a sequence of 2 or more connected points,
+* Polygon - a closed collection of connected points that define a geographic boundary,
+* Multipolygons - a collection of polygons.
 
-In this case we'll use the fairly standard WGS84 (World Grid System) for this inital projection of the locations and then transform these into <insert projection>. Which projection to use is down to the location on earth where the points are. For further information see <http://spatialreference.org/>. The projections we're using are stored in the variables _espg.3577_ and _wgs.84_.
+### World Geodetic System
+In the 1950's the United States Department of Defence, together with scientists from around the world, commenced efforts to establish a system to which geodetic data (measurements of the earth) could be referred. This collaboration established a common latitude, longitude and elevation co-ordinate system and lead to the World Geodetic System 1960 (WGS60).
+
+Since 1960 the WGS has been updated a number of times to account for new information and data that effects measurements of the earths surface. The last such updated was in 1984 and formed the WGS84 used today as the standard reference system for modern technology based on the Gloabl Positioning Service (GPS).
 ```{r projections}
-epsg.3577 <- "+proj=aea +lat_1=-18 +lat_2=-36 +lat_0=0 +lon_0=132 +x_0=0 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs"
 wgs.84 <- "+proj=longlat +datum=WGS84 +no_defs +ellps=WGS84 +towgs84=0,0,0"
 ```
 
 ## Location of Uluru
-The first step is to find the latitude and logitude of Uluru within the WGS84 projection. There are a number of packages that provide the ability to obtain the latitude and longitude of an address or significant place but in this example I'll use the geocode_OSM function in the `tmaptools` package. This function use the Open Street Maps Api to retrive the location of a place.
-```{r uluru_geocode}
+The first step is to find the latitude and logitude of Uluru using the WGS84 standard. There are a number of packages that provide the ability to obtain the latitude and longitude of an address or significant place but in this example I'll use the geocode_OSM function in the `tmaptools` package. This function use the Open Street Maps Api to retrive the location of a place.
+```{r uluru_geocode, message = FALSE, warning = FALSE}
 loc <- geocode_OSM("Uluru", projection = wgs.84)
 longitude <- loc$coords["x"]
 latitude <- loc$coords["y"]
 ```
 
 The final step for the latitude and longitude that we've obtained is to convert the point to well known text (WKT). Well known text is a binary represenation ofa geospatial object and is needed for <insert reason>. The paste operation concatenates our latitude and longitude together in a string prefixed with _**POINT**_. The ensures the readWKT function from the `rgeos` is able to understand it is dealing with a point rather than another geospatial object.
-```{r uluru_wkt}
+```{r uluru_wkt, message = FALSE, warning = FALSE}
 loc_txt <- paste("POINT(",longitude," ",latitude,")")
 loc_wkt <- readWKT(loc_txt, p4s = CRS(wgs.84))
 ```
 
 ## Coast line data
 To help with the calculation of how far Uluru is from the coast fortunately there is a shape file of the coastlines of the world on the <http://www.naturalearthdata.com> website. In this step the shape file is downloaded locally and unzipped. The shape file is loaded into memory using the readOGR function in the `<packageName>` package.
-```{r}
+```{r download, message = FALSE, warning = FALSE}
 download.file("http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/physical/ne_10m_coastline.zip", 
               destfile = 'coastlines.zip')
 
@@ -68,14 +71,21 @@ coast <- readOGR("ne-coastlines-10m/ne_10m_coastline.shp")
 ```
 
 ## Distance calculations
-Now that we have both the point location of Uluru and the coast lines of the world loaded we can calculate the minimum distance from Uluru to the coast. This operation can be performed through the gDistance function in the `packagename` package. The gDistance function finds the distance between two points, or in the case of a point and multiploygon, the minimum distance between the point and the polygon. 
-```{r wgs84_distance}
-min_degrees <- gDistance(loc_wkt,coast)
-min_degrees
+Now that the point location of Uluru and the coast lines of the world are known and loaded into R the minimum distance from Uluru to the coast can be calculated. This operation can be performed through the gDistance function in the `rgeos` package. The gDistance function finds the distance between two points, or in the case of a point and multiploygon, the minimum distance between the point and the polygon. 
+```{r wgs84_distance, message = FALSE, warning = FALSE}
+dist_line <- dist2Line(loc_wkt, coast)
+closest_longitude <- dist_line[2]
+closest_latitude <- dist_line[3]
 ```
 
-The result may not be as expected and although it provides and answer it might not be the expected answer. The value returned is in degrees. The disatnce between two geospatial objects in the WGS84 projection will always return a value in degrees. If we want an answer in kilometres the geospatial objects that we have need to be transformed into another projection and for this we'll use the epsg 3577 projection described above. We perform this transform using the spTransform function in the `packagename` package.
-```{r transform}
-coast_3577 <- spTransform(coast,CRS(epsg.3577))
-loc_3577 <- spTransform(loc_wkt, CRS(epsg.3577))
+
+```{r plot}
+th     <- seq(0,2*pi,len=1000)
+circle <- cbind(1.00001*min_degrees*cos(th)+loc_wkt$x,1.00001*min_degrees*sin(th)+loc_wkt$y)
+sp_circle <- SpatialLines(list(Lines(list(Line(circle)),ID="1")),proj4string=CRS(wgs.84))
+
+# Plot on map
+plot(coast, asp=1)
+plot(loc_wkt, add = TRUE, col = "red", pch = 20)
+plot(sp_circle, add = TRUE, col = "blue", lty = 2)
 ```
