--- a/Geospatial/How_Far_To_The_Coast_From_Uluru.Rmd
+++ b/Geospatial/How_Far_To_The_Coast_From_Uluru.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "How far is Uluru to the coast"
+title: "How far is Uluru to the coast?"
 author: "Will Kent"
 output: html_document
 ---
@@ -8,12 +8,12 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## How far is Uluru from the coast?
+## Introduction
 Uluru, Ayers Rock or simply "the Rock" is a large sandstone monolith located in central Australia. It is thought to have formed approximately 550 million years ago. It stands 348 metres above the surrounding plain and is listed as a UNESCO World Heritage Site.
 
 Uluru is a site of imporance to the local *Pitjantjatjara* and *Yankunyjatjara* Aboriginal people. Uluru, and the surrounding area, is of great spiritual and cultural significance. 
 
-This post will use R to answer the questions what is the minimum distance to the coast from Uluru? And where is that point?
+This vignette will use R to answer the questions what is the minimum distance to the coast from Uluru? And where is that point?
 
 To start the following libraries will need to be loaded. 
 
@@ -22,6 +22,7 @@ library(tmaptools)
 library(rgeos)
 library(geosphere)
 library(rgdal)
+library(ggplot2)
 ```
 
 ## Geospatial Data
@@ -36,57 +37,76 @@ The basic geospatial objects are:
 * Multipolygons - a collection of polygons.
 
 ### World Geodetic System
-In the 1950's the United States Department of Defence, together with scientists from around the world, commenced efforts to establish a system to which geodetic data (measurements of the earth) could be referred. This collaboration established a common latitude, longitude and elevation co-ordinate system which led to the World Geodetic System 1960 (WGS60) standard.
+In the 1950's the United States Department of Defence, together with scientists from around the world, commenced efforts to establish a system to which geodetic data (measurements of the earth) could be referred. This collaboration established a common latitude, longitude and elevation co-ordinate reference system (CRS) which was called World Geodetic System 1960 (WGS60).
 
-Since 1960 the WGS has been updated a number of times to account for new information and data that effects measurements of the earths surface. The last such updated was in 1984 and formed the WGS84 used today as the standard reference system for modern technology based on the Gloabl Positioning Service (GPS). 
+Since 1960 the World Geodetic System (WGS) has been updated a number of times to account for new information and data that effects measurements of the earths surface. The last such updated was in 1984 and formed the WGS84 used today as the standard reference system for modern technologies based on the Global Positioning Service (GPS). 
 
-The use of WGS84 to place objects on the earths surface is a common practice but there are other methods available. In this instance WGS84 will be used as the co-ordinate reference system (CRS) and is set below for future use.
+The use of WGS84 to place objects on the earths surface is a common practice but there are other methods available. In this instance WGS84 will be used as the CRS and is set below for future use.
 ```{r projections}
 wgs84 <- "+proj=longlat +datum=WGS84 +no_defs +ellps=WGS84 +towgs84=0,0,0"
 ```
 
 ## Locating Uluru
-The first step in this process is to identify the latitude and logitude of Uluru using the WGS84 standard. There are a number of packages and services that provide the ability to obtain the latitude and longitude of an address or significant place but in this example the geocode_OSM function in the `tmaptools` package will be used. This function uses the Open Street Maps API to retrive the location of a place.
+The first step is to identify where Uluru is located on the earth's surface. There are a number of packages and services that provide the ability to obtain the co-ordinates, or latitude and longitude, of an address or significant place. In this example the geocode_OSM function in the `tmaptools` package will be used. This function uses the Open Street Maps (OSM) Nominatim (<http://nominatim.openstreetmap.org/>) to identify the location of an address or place.
+
+The first term passed to the geocode_OSM function is the search term, in this case Uluru. The second term is the CRS or projection to be used, in this instance the WGS84 CRS. The geocode_OSM accepts other parameters that control what information is returned and in what format. The server to use can also be set if a local OSM Nominatim server is available. Further details an be found in R using `?geocode_OSM`. 
 ```{r uluru_geocode, message = FALSE, warning = FALSE}
 loc <- geocode_OSM("Uluru", projection = wgs84)
 longitude <- loc$coords["x"]
 latitude <- loc$coords["y"]
 ```
 
-The final step for the latitude and longitude that we've obtained is to convert the point to well known text (WKT). Well known text is a binary represenation ofa geospatial object and is needed for <insert reason>. The paste operation concatenates our latitude and longitude together in a string prefixed with _**POINT**_. The ensures the readWKT function from the `rgeos` is able to understand it is dealing with a point rather than another geospatial object.
+Now that the co-ordinates for Uluru have been obtained the point needs to be converted to a geometry object. This conversion is required for subsequent calculation of distances between Uluru and the coast.
+
+To perform this conversion the readWKT function from the `rgeos` package is used. The readWKT function reads the Well Known Text (WKT), created by concatenating the latitude and longitude into the format _POINT(longitude latitude)_, and outputs a spatial object in the specified WGS84.
 ```{r uluru_wkt, message = FALSE, warning = FALSE}
 loc_txt <- paste("POINT(",longitude," ",latitude,")")
 loc_wkt <- readWKT(loc_txt, p4s = CRS(wgs84))
 ```
 
-## Coast line data
-To help with the calculation of how far Uluru is from the coast fortunately there is a shape file of the coastlines of the world on the <http://www.naturalearthdata.com> website. In this step the shape file is downloaded locally and unzipped. The shape file is loaded into memory using the readOGR function in the `<packageName>` package.
-```{r download, message = FALSE, warning = FALSE}
+## The Coast Line
+The coast forms a geographic boundary between land and sea. The land masses contained within these boundaries form polygons and collection of the combined polygons of each land mass forms a multipolygon. Fortunately for this task there is a publicly available shape file that conatins this multipolygon. The shape file is available on the <http://www.naturalearthdata.com> website.
+
+The coastline shape file is downloaded and unzipped. The shape file is then loaded into a spatial object using the readOGR function in the `rgdal` package. The readOGR function reads the unzipped shape file and returns a spatial object.
+```{r download, message = FALSE, warning = FALSE, results = 'hide'}
 download.file("http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/10m/physical/ne_10m_coastline.zip", 
               destfile = 'coastlines.zip')
 
 unzip(zipfile = "coastlines.zip", 
       exdir = 'ne-coastlines-10m')
 
-coast <- readOGR("ne-coastlines-10m/ne_10m_coastline.shp")
+coast <- readOGR("ne-coastlines-10m/ne_10m_coastline.shp", p4s = wgs84)
 ```
 
-## Distance calculations
-Now that the point location of Uluru and the coast lines of the world are known and loaded into R the minimum distance from Uluru to the coast can be calculated. This operation can be performed through the gDistance function in the `rgeos` package. The gDistance function finds the distance between two points, or in the case of a point and multiploygon, the minimum distance between the point and the polygon. 
+## Distance calculation
+Now that the location of Uluru and the coast lines of the world are known and loaded into R the minimum "as the crow flies" distance from Uluru to the coast can be calculated. This operation can be performed using the dist2Line function in the `geosphere` package. The dist2Line function returns a matrix with the distance, longitude and latitude of the nearest point on the line. The distance returned is measured in metres; the value is divided by 1000 to obtain the distance in kilometres.
+
 ```{r wgs84_distance, message = FALSE, warning = FALSE}
 dist_line <- dist2Line(loc_wkt, coast)
 closest_longitude <- dist_line[2]
 closest_latitude <- dist_line[3]
+
+paste("Distance from Uluru to the coast: ",dist_line[1]/1000)
+paste("The location of the closest point on the coast to Uluru is at: ",closest_longitude," ",closest_latitude)
 ```
 
+The answer to the original question has been obtained. Uluru is 679.35 kilometres from the coast and the closest point is located on the South Australian coast at the head of the Great Australian Bight.
 
-```{r plot}
-th     <- seq(0,2*pi,len=1000)
-circle <- cbind(1.00001*min_degrees*cos(th)+loc_wkt$x,1.00001*min_degrees*sin(th)+loc_wkt$y)
-sp_circle <- SpatialLines(list(Lines(list(Line(circle)),ID="1")),proj4string=CRS(wgs84))
+A map of the world showing the point on the earth where Uluru is located and a circle around Uluru of the minimum distance from the coast can be plotted to give a more visual represenation of the closest poiunt on the coast to Uluru.
+
+```{r plot, message = FALSE, warning = FALSE}
+th <- seq(0, 2 * pi, len = 1000)
+dist_degrees <- gDistance(loc_wkt,coast)
+circle <- cbind(1.00001 * dist_degrees * cos(th) + loc_wkt$x,
+                1.00001 * dist_degrees * sin(th) + loc_wkt$y)
 
 # Plot on map
-plot(coast, asp=1)
-plot(loc_wkt, add = TRUE, col = "red", pch = 20)
-plot(sp_circle, add = TRUE, col = "blue", lty = 2)
+ggplot() +
+  geom_path(data = coast, aes(x = long, y = lat, group = group)) +
+  geom_path(data = data.frame(circle), aes(x = X1, y = X2), colour = "blue") + 
+  geom_point(data = data.frame(loc_wkt), aes(x = x, y = y), colour = "red") +
+  scale_x_continuous(limits = c(110, 155)) +
+  scale_y_continuous(limits = c(-45, -5)) +
+  coord_fixed()
 ```
+
